[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.dependencies]
anyhow              = "1"
cached              = { version = "0.56.0", features = ["disk_store"] }
clap                = { version = "4.5.45", features = ["derive"] }
clap-cargo          = "0.16.0"
json-strip-comments = "1.0.4"
minijinja           = { version = "2.11.0", default-features = false, features = ["serde", "custom_syntax"] }
naql-build          = { path = "crates/naql-build" }
naql-shared         = { path = "crates/naql-shared" }
radix_fmt           = "1.0.0"
rayon               = "1.11"
rust-embed          = { version = "8.5.0", features = ["interpolate-folder-path", "compression"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
tempfile            = "3"
tracing             = "0.1"
tracing-subscriber  = "0.3.0"
void                = "1.0.2"
walkdir             = "2.5.0"
which               = "7.0.0"
zip                 = { version = "2.1.3", default-features = false, features = ["deflate"] }

[profile.release]
lto   = true
strip = "symbols"
