[package]
edition = "2024"
name    = "naql-cli"
version = "0.1.0"

[[bin]]
name = "naql"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
clap-cargo         = { workspace = true }
naql-build         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
